--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivEnrollment.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivEnrollment.html
@@ -19,8 +19,8 @@
         /**
          * TODO use a lookup tag to get these concept ids. Will require HTML-463
          */
-        var YES_CONCEPT_ID = 160563;
-        var NO_CONCEPT_ID = 164144;
+        var TRANSFER_IN = 160563;
+        var NEW_CLIENT = 164144;
         var TRANSIT =164931;
         var RE_ENROLL=159833;
         var PATIENT_HAS_UPN = <lookup expression="kenyaemr.hasHivUniquePatientNumber()" />;
@@ -42,7 +42,7 @@
 
             ageGroup();
             jq('.muac').hide();
-            jq('#transfer-in-status input').change(onTransferStatusChange);
+            jq('#transfer-in-status input').change(onEntryPointChange);
             jq('#art-status input').change(onArtStatusChange);
             jq('#generate-hiv-id').click(onUpnGenerateClick);
             jq("#pregnant :input[type=radio]").change(onPregnancySelected);
@@ -63,7 +63,7 @@
                 if (code &gt;= 48  &amp;&amp; code &lt;= 57) //numbers
                     event.preventDefault();
             });
-            //onTransferStatusChange();
+            //onEntryPointChange();
             //defaults
             jq('#generate-hiv-id').hide();
             //Gender based validations  pregnancy, breastfeeding bmi and muac
@@ -147,7 +147,7 @@
             var encounterDate = getValue('encounter-date.value');
             var confirmedPveDate = getValue('confirmed-positive-date.value');
             var transferInDate = getValue('transfer-in-date.value');
-            var transferStatus = getValue('transfer-in-status.value');
+            var entryPointStatus = getValue('transfer-in-status.value');
             var firstEnrolledDate = getValue('first-enrolled-date.value');
             var artStartDate = getValue('art-start-date.value');
             var tsTelephone = getValue('ts-telephone.value');
@@ -173,7 +173,7 @@
                 return false;
             }
 
-            if ((transferStatus == NO_CONCEPT_ID || transferStatus == YES_CONCEPT_ID) &amp;&amp; confirmedPveDate =="") {
+            if ((entryPointStatus == NEW_CLIENT || entryPointStatus == TRANSFER_IN) &amp;&amp; confirmedPveDate =="") {
                 getField('confirmed-positive-date.error').html('Confirmed HIV+ date, should not be empty').show();
                 return false;
             }
@@ -191,21 +191,21 @@
             }
 
             var isEnrollmentDateBeforeConfirmedPve = moment(moment(moment(encounterDate, 'YYYY-MM-DD').toDate()).format('YYYY-MM-DD')).isBefore(moment(moment(confirmedPveDate, 'YYYY-MM-DD').toDate()).format('YYYY-MM-DD'));
-            if(transferStatus == NO_CONCEPT_ID || transferStatus == YES_CONCEPT_ID) {
+            if(entryPointStatus == NEW_CLIENT || entryPointStatus == TRANSFER_IN) {
                 if (isEnrollmentDateBeforeConfirmedPve) {
                     getField('confirmed-positive-date.error').html('Confirmed HIV+ date, should not be later than HIV enrollment Date').show();
                     return false;
                 }
             }
 
-            if(transferStatus== YES_CONCEPT_ID) {
+            if(entryPointStatus== TRANSFER_IN) {
                 var isTransferInBeforeFirstEnrolled = moment(moment(moment(transferInDate, 'YYYY-MM-DD').toDate()).format('YYYY-MM-DD')).isBefore(moment(moment(firstEnrolledDate, 'YYYY-MM-DD').toDate()).format('YYYY-MM-DD'));
                 if (isTransferInBeforeFirstEnrolled) {
                     getField('transfer-in-date.error').html('Transfer in date, should not be later than Date first enrolled in HIV care').show();
                     return false;
                 }
             }
-            if(transferStatus == YES_CONCEPT_ID) {
+            if(entryPointStatus == TRANSFER_IN) {
                 var isARTStartDateBeforeFirstEnrolled = moment(moment(moment(artStartDate, 'YYYY-MM-DD').toDate()).format('YYYY-MM-DD')).isBefore(moment(moment(firstEnrolledDate, 'YYYY-MM-DD').toDate()).format('YYYY-MM-DD'));
                 if (isARTStartDateBeforeFirstEnrolled) {
                     getField('art-start-date.error').html('ART start date , should not be later than date first enrolled in HIV care').show();
@@ -219,7 +219,7 @@
 
             var phoneno = /^\(?([0-9]{3})\)?[-. ]?([0-9]{3})[-. ]?([0-9]{4})$/;
 
-            if(transferStatus == NO_CONCEPT_ID || transferStatus == YES_CONCEPT_ID) {
+            if(entryPointStatus == NEW_CLIENT || entryPointStatus == TRANSFER_IN) {
                 if (tsTelephone != "") {
                     if (/^(?:\+254|0|254)(\d{9})$/.test(tsTelephone) === false) {
                         getField('ts-telephone.error').html('Phone number should contain only 10 digits').show();
@@ -253,8 +253,8 @@
                 jq("#patient-age-group").text(childLabelText);
             }
         }
-        function onTransferStatusChange() {
-            var transferStatus = getValue('transfer-in-status.value');
+        function onEntryPointChange() {
+            var entryPointStatus = getValue('transfer-in-status.value');
             var pgender = "<lookup expression="patient.gender" />";
             var pAge = parseInt('<lookup expression="patient.age"/>');
             var transferDetails = jq('#transfer-details');
@@ -270,7 +270,7 @@
             var haartChecked = jq('#haartChecked');
             var baselineFieldset = jq('#baseline-fieldset');
             //New patient
-            if (transferStatus== NO_CONCEPT_ID) {
+            if (entryPointStatus == NEW_CLIENT) {
                 var facility_confirmed = "<lookup expression="fn.latestObs(162724).getValueText()"/>";
                 jq('#hiv-id :input').prop('disabled', false);
                 jq('#transfer-details').hide();
@@ -312,7 +312,7 @@
                clearHiddenSections([transferDetails, whoAdult, whoChild, artStatus, pmtctChecked, pepChecked, prepChecked, haartChecked]);
             }
             //Transfer in
-            if (transferStatus== YES_CONCEPT_ID) {
+            if (entryPointStatus== TRANSFER_IN) {
                 jq('#transfer-details :input').prop('disabled', false);
                 jq('#hiv-id :input').prop('disabled', false);
                 jq('#generate-hiv-id').hide();
@@ -349,7 +349,7 @@
                 }
                 clearHiddenSections([transferDetails, whoAdult, whoChild, artStatus, pmtctChecked, pepChecked, prepChecked, haartChecked, baselineFieldset,]);
             }
-            if (transferStatus== TRANSIT) {
+            if (entryPointStatus== TRANSIT) {
                 jq('#hiv-id :input').prop('disabled', false);
                 jq('#transit-patient').show();
                 jq('#transfer-details').hide();
@@ -361,7 +361,7 @@
                 jq('#generate-hiv-id').hide();
                 clearHiddenSections([transferDetails, dateConfirmedPositive, facilityConfirmedPositive, whoAdult, whoChild, artStatus, pmtctChecked, pepChecked, prepChecked, haartChecked,baselineFieldset]);
             }
-            if (transferStatus == RE_ENROLL) {
+            if (entryPointStatus == RE_ENROLL) {
                 jq('#hiv-id :input').prop('disabled', true);
                 jq('#transit-patient').hide();
                 jq('#transfer-details').hide();
@@ -373,7 +373,7 @@
                 jq('#generate-hiv-id').hide();
                 clearHiddenSections([transferDetails, whoAdult, whoChild, artStatus, pmtctChecked, pepChecked, prepChecked, haartChecked, baselineFieldset]);
             }
-            if (transferStatus == false) {
+            if (entryPointStatus == false) {
                 jq('#hiv-id :input').prop('disabled', false);
                 jq('#transit-patient').hide();
                 jq('#transfer-details').hide();
