--- a/omod/src/main/webapp/resources/htmlforms/hts/referralAndLinkage.html
+++ b/omod/src/main/webapp/resources/htmlforms/hts/referralAndLinkage.html
@@ -199,10 +199,16 @@
                     <td>&#160;&#160;&#160;&#160;&#160;&#160;Facility referred to: </td>
                     <td> &#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;
                         <obs id="referred-facility" conceptId="161550AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/>
-                    </td><td>  <input type="checkbox" name="facility-referred" id="location-referred" /> This facility</td>
+                        <span class="value"><recentObs conceptId="161550AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
+                    </td>
+                    <td>
+                        <input type="checkbox" name="facility-referred" id="location-referred" />
+                        This facility
+                    </td>
                     <td>&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160; Date to be enrolled : </td>
                     <td>
                         <obs conceptId="161561AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" id="date-referred"   allowFutureDates="true" />
+                        <span class="value"><recentObs conceptId="161561AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"/></span>
                     </td>
                 </tr>
             </table>
