Ensured required fields screening and ART prophylaxis filled before saving forms

--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsAntenatalVisit.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsAntenatalVisit.html
@@ -1167,7 +1167,7 @@
 											 answerConceptIds="664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159393AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,703AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1118AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1175AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 											 answerLabels="Normal,Presumed,Confirmed,Not Done,N/A"
 											 style="dropdown"
-											 id="cacx-screening" />
+											 id="cacx-screening" required="true" />
 									</td>
 						</tr>
 						<tr id="cacx-screening-method">
@@ -1176,7 +1176,7 @@
 											 answerConceptIds="885AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162816AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,164977,5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 											 answerLabels="Pap Smear,VIA,VILI,Other"
 											 style="radio"
-											 id="screening-cacx-method"
+											 id="screening-cacx-method" required="true"
 											 />
 									</td>
 								</tr>
@@ -1231,7 +1231,7 @@
 								conceptId="1109AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 								answerConceptIds="105281AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,74250AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1107AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 								answerLabels="Cotrimoxazole,Dapsone,None"
-								style="radio" id="prophylaxis-used"/>
+								style="radio" id="prophylaxis-used" required="true"/>
 							<span style="color:red;"><strong>*</strong></span>
 						</td>
 					</tr>
@@ -1239,7 +1239,7 @@
 						<td>HAART given to mother during this visit?</td>
 						<td><obs
 								conceptId="5576AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA" style="yes_no"
-							     id="haart-given"/>
+							     id="haart-given" required="true"/>
 							<span style="color:red;"><strong>*</strong></span>
 						</td>
 						<td>HAART start date : </td>
