--- a/omod/src/main/webapp/resources/htmlforms/mchms/mchmsPostnatalVisit.html
+++ b/omod/src/main/webapp/resources/htmlforms/mchms/mchmsPostnatalVisit.html
@@ -1312,7 +1312,7 @@
 								 answerConceptIds="1107AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,49AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,127847AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1118AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 								 answerLabels="None,Vesicovaginal Fistula,Rectovaginal fistula,Not done"
 								 style="dropdown"
-								 id="fistula-screening"
+								 id="fistula-screening" required="true"
 								  />
 						</td>
 					</tr>
@@ -1322,7 +1322,7 @@
 								 answerConceptIds="664AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,159393AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,703AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1118AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,1175AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 								 answerLabels="Normal,Presumed,Confirmed,Not Done,N/A"
 								 style="dropdown"
-								 id="cacx-screening" />
+								 id="cacx-screening" required="true"/>
 						</td>
 					</tr>
 					<tr id="cacx-screening-method">
@@ -1331,7 +1331,7 @@
 								 answerConceptIds="885AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,162816AAAAAAAAAAAAAAAAAAAAAAAAAAAAAA,164977,5622AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA"
 								 answerLabels="Pap Smear,VIA,VILI,Other"
 								 style="radio"
-								 id="screening-cacx-method"
+								 id="screening-cacx-method" required="true"
 						/>
 						</td>
 					</tr>
