Validated hts forms initial and confirmatory to hide priority population options on general population type

--- a/omod/src/main/webapp/resources/htmlforms/hts/htsConfirmatoryTest.html
+++ b/omod/src/main/webapp/resources/htmlforms/hts/htsConfirmatoryTest.html
@@ -30,6 +30,7 @@
             }
             if(val == 164928){
                 jq("#key-population").hide();
+                jq("#priority-population").hide();
                 clearHiddenSections(keypop);
                 clearHiddenSections(pripop);
             }
