--- a/omod/src/main/webapp/resources/htmlforms/hts/htsInitialTest.html
+++ b/omod/src/main/webapp/resources/htmlforms/hts/htsInitialTest.html
@@ -30,6 +30,7 @@
             }
             if(val == 164928){
                 jq("#key-population").hide();
+                jq("#priority-population").hide();
                 clearHiddenSections(keypop);
                 clearHiddenSections(pripop);
             }
