--- a/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
+++ b/omod/src/main/webapp/resources/htmlforms/hiv/hivGreenCard.html
@@ -157,7 +157,6 @@ Green Card follow-up visit form
             recordedStabilityAssessmentIndicators();
             jq('#showNumberBooked').hide();
             getField("returnVisitDate.value").change(getPatientsBookedOnDate);
-            jq("#enrollInIptProgram").click(enrollPatientToIPTProgram);
 
             everOnIPTSelected = null;
             patientCurrentlyOnIPT = null;
@@ -613,6 +612,21 @@ Green Card follow-up visit form
                     width: 900,
                     modal: true });
             });
+
+            jq("#btnEnrollInIptProgram").click(function(e){ // ipt outcome
+                e.preventDefault();
+                jq("#dlgIptInitiation").dialog({bgiframe: true,
+                    title : "Initiate patient in IPT",
+                    buttons: {
+                        "Confirm IPT Initiation": enrollPatientToIPTProgram,
+                        "Cancel": function () {
+                            jq("#dlgIptInitiation").dialog("close");
+                        }
+                    },
+                    height: 300,
+                    width: 900,
+                    modal: true });
+            });
         });   //End of JQuery onReady function
 
 
@@ -626,7 +640,7 @@ function getPatientsBookedOnDate() {
     });
 }
 
-// action when button to discontinue in ipt program is clicked
+//----------------------------------- IPT handlers ------------------------
 
 function discontinuePatientInIpt() {
     var selIptDisReason = jq("#iptDiscReason").val();
@@ -639,13 +653,13 @@ function discontinuePatientInIpt() {
     }
 
     jq.getJSON('/' + ctxPath + '/kenyaemr/emrUtils/discontinueIptProgram.action', { completionDate: encDate, patientId: patientId, reason: selIptDisReason, action: txtDiscAction, userId: userId }, function(data) {
-        if (data.discontinueInIpt != null) {
+        if (data.status == "Success") {
             jq("#dlgIptOutcome").dialog('close');
-            jq("#lblIptCompletionState").text("IPT completed successfully");
+            jq("#lblIptCompletionState").text(data.message);
             jq("#btnShowIptOutcomeDialog").attr("disabled", true);
             jq("#btnShowIptFollowupDialog").attr("disabled", true);
         } else {
-            jq("#lblIptCompletionState").text("There was a problem discontinuing patient in IPT Program");
+            jq("#lblIptCompletionState").text(data.message);
         }
 
     });
@@ -679,37 +693,37 @@ function recordIptFollowupInformation() {
         iptAdherence: iptAdherence,
         iptActionTaken: iptActionTaken}, function(data) {
 
-        if (data.followupEncounter != null) {
+        if (data.status == "Success") {
             jq("#dlgIptFollowup").dialog('close');
-            jq("#lblIptCompletionState").text("IPT followup information saved successfully");
+            jq("#lblIptCompletionState").text(data.message);
             jq("#btnShowIptFollowupDialog").attr("disabled", true);
         } else {
-            jq("#lblIptCompletionState").text("There was a problem saving IPT followup information");
+            jq("#lblIptCompletionState").text(data.message);
         }
 
     });
 }
 
-//----------------------------------- IPT handlers ------------------------
 
 // enroll patient in IPT program
 
 function enrollPatientToIPTProgram() {
     var patientId = <lookup expression="patient.patientId"/>;
     var encDate = getValue('encounter-date.value');
+    var indicationForIpt = jq("#indicationForIpt").val();
+    var userId = <lookup expression="user.userId"/>; // get logged in user. the discontinueIptProgram method doesn't seem to get access to Context.authenticatedUser()
+
     if(encDate == null) {
         encDate = new Date();
     }
 
-    jq.getJSON('/' + ctxPath + '/kenyaemr/emrUtils/enrollInIptProgram.action', { enrollmentDate: encDate, patientId: patientId }, function(data) {
-        if (data.enrolledInIpt != null) {
+    jq.getJSON('/' + ctxPath + '/kenyaemr/emrUtils/enrollInIptProgram.action', { enrollmentDate: encDate, patientId: patientId, indicationForIpt: indicationForIpt, userId: userId }, function(data) {
+        if (data.status == "Success") {
             jq("#enrollInIptProgram").attr("disabled", true);
-            jq("#lblIptEnrollmentStatus").text("Patient successfully enrolled in IPT Program");
+            jq("#lblIptEnrollmentStatus").text(data.message);
         } else {
-            jq("#lblIptEnrollmentStatus").text("There was a problem enrolling the patient in IPT Program");
+            jq("#lblIptEnrollmentStatus").text(data.message);
         }
-
-
     });
 }
 
@@ -2918,8 +2932,24 @@ clearHiddenSections = function(parentObj) {
                     <div id="ipt-initiation" style="width: 100%; float: left; overflow: auto; text-align: left; padding: 5px"><span class="ke-flagtag">Candidate for IPT Initiation</span>
                         <table>
                             <tr>
-                                <td><button type="button" style="background-color:steelblue;font-size:16pt;font-weight:600;padding: 4px 10px;color:white;height: 50px" id="enrollInIptProgram">Start IPT</button></td>
-                                <td><label style="background-color: #E9E4CC;font-size: 16pt;font-weight: 600;" id="lblIptEnrollmentStatus"></label></td>
+                                <td><button type="button" style="background-color:steelblue;font-size:16pt;font-weight:600;padding: 4px 10px;color:white;height: 50px" id="btnEnrollInIptProgram">Start IPT</button></td>
+                                <td><label style="background-color: #E9E4CC;font-size: 16pt;font-weight: 600;color: green" id="lblIptEnrollmentStatus"></label></td>
+                            </tr>
+                        </table>
+                    </div>
+                    <div id="dlgIptInitiation" style="display: none">
+                        <span class="ui-helper-hidden-accessible"><input type="text"/></span>
+                        <table>
+                            <tr>
+                                <td>Indication for IPT</td>
+                                <td>
+                                    <select id="indicationForIpt">
+                                        <option value="" selected="true">Select indication</option>
+                                        <option value="138571">HIV Positive</option>
+                                        <option value="162277">In prison</option>
+                                        <option value="162278">Child exposed to tuberculosis</option>
+                                    </select>
+                                </td>
                             </tr>
                         </table>
                     </div>
@@ -2929,14 +2959,12 @@ clearHiddenSections = function(parentObj) {
 
                     <br />
                     <br/>
-                    <table border="0">
+                    <table border="0" style="border-spacing: 8px" width="90%">
                         <tr>
-                            <td><button type="button" id="btnShowIptFollowupDialog" style="background-color:steelblue;font-size:16pt;font-weight:600;padding: 4px 10px;color:white;height: 50px">Record IPT Followup Details</button></td>
-                            <td></td>
-                            <td><button type="button" id="btnShowIptOutcomeDialog" style="background-color:seagreen;font-size:16pt;font-weight:600;padding: 4px 10px;color:white;height: 50px">Record IPT Outcome</button></td>
-                        </tr>
-                        <tr>
-                            <td colspan="3"  align="left"><label id="lblIptCompletionState" style="font-size: 16pt;font-weight: 600;color:darkgreen"/></td>
+                            <td width="20%"><button type="button" id="btnShowIptFollowupDialog" style="background-color:steelblue;font-size:16pt;font-weight:600;padding: 4px 10px;color:white;height: 50px">Record IPT Followup Details</button></td>
+                            <td width="20%"><button type="button" id="btnShowIptOutcomeDialog" style="background-color:seagreen;font-size:16pt;font-weight:600;padding: 4px 10px;color:white;height: 50px">Record IPT Outcome</button></td>
+                            <td width="60%"  align="left"><label id="lblIptCompletionState" style="font-size: 16pt;font-weight: 600;color:green"/></td>
+
                         </tr>
                     </table>
 
